Mon May  8 08:19:45 2000  Gray Watson  <gray@256.com>

	* Renamed dmalloc.cc to dmallocc.cc and added the building of
 	libdmalloc++.a per Dimitri's comments.

	* Renamed rpm.spec to dmalloc.rpm per Dimitri's comments.

Mon May  1 20:34:18 2000  Gray Watson  <gray@256.com>

	* Fixed some more function headers.

Tue Apr 18 15:41:30 2000  Gray Watson  <gray@256.com>

	* Releasing dmalloc version 4.5.2.

	* Added DGUX notes from Takis Psarogiannakopoulos.

	* Fixed bug in chunk.c pointer checking.  Thanks Ezra.

Mon Apr 17 21:55:39 2000  Gray Watson  <gray@256.com>

	* Cleaned up some of the compat.[ch] headers to better match
 	reality.

Thu Mar 30 10:05:01 2000  Gray Watson  <gray@whopper.256.com>

	* Reorganized the dmalloc.texi documentation and moved to using
	makeinfo program.

	* Releasing dmalloc version 4.5.1.

	* Fixed a problem with compilation of dmalloc_lp.c.  Thanks Chip.

Wed Mar 29 17:40:43 2000  Gray Watson  <gray@whopper.256.com>

	* Releasing dmalloc version 4.5.0.

Fri Mar 24 16:21:39 2000  Gray Watson  <gray@whopper.256.com>

	* Releasing dmalloc version 4.5.0 beta 1.

	* Added new dmalloc_mark() and dmalloc_log_changed() functions.

	* Added new BBLOCK_FREE_START and redid some of the block flag
	checking.

Tue Mar 21 13:15:46 2000  Gray Watson  <gray@whopper.256.com>

	* Releasing dmalloc version 4.4.0 beta 2.

	* Removed the stupid old Deansify.pl script.

	* Added rpm.spec file to the distribution.

	* Fixed problem with chunk checking of dblock structures.

Mon Mar 20 18:19:06 2000  Gray Watson  <gray@whopper.256.com>

	* Releasing dmalloc version 4.4.0 beta 1.

	* Removed usage of PTHREAD_MUTEX_INITIALIZER which was delaying
	the mutex-init call.

	* Added code to fix some recursive problems with open and atexit.

	* Basically encorporated Randell's changes [finally].  Thanks for
	your patience dude.

	* Removed the stupid chunk.c unions.  Why did I ever do that?  It
	made debugging and absolute bear.

	* www.dmalloc.com -> dmalloc.com.
