@@ -1,3 +1,7 @@
+Mon May 15 11:46:21 2000  Gray Watson  <gray@256.com>
+
+	* Added mprotoect support to the library.  About time.
+
 Mon May  8 08:19:45 2000  Gray Watson  <gray@256.com>
 
 	* Renamed dmalloc.cc to dmallocc.cc and added the building of
@@ -1589,5 +1593,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray@toaster.antaire.com)
 	* Started ChangeLog.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.246 2000/05/08 12:27:51 gray Exp $
+$Id: ChangeLog,v 1.247 2000/05/15 15:46:39 gray Exp $
 -------------------------------------------------------------------------------
